fix: 전체 페이지에 overflow-y scroll 적용 #380
모달을 표시하면 몇몇 페이지에서 없던 스크롤이 나타나는 문제 해결

--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -7,6 +7,7 @@
     font-family: 'SUIT Variable', 'Noto Sans KR', sans-serif;
     color: #4b4b4b;
     background-color: #fffef9;
+    overflow-y: scroll;
   }
 }
 
